syntax = "proto3";

package blockscout.stats.v1;

option go_package = "github.com/blockscout/blockscout-rs/stats";

service StatsService {
  rpc GetStats(StatsRequest) returns (Stats);
  rpc GetNewBlocks(ChartRequest) returns (Chart);
}

message StatsRequest {}

message Point {
  string date = 1;
  uint64 value = 2;
}

message Chart { repeated Point chart = 1; }

message Stats { uint64 total_blocks_all_time = 1; }

enum Precision {
  DAY = 0;
  MONTH = 1;
}

message ChartRequest {
  // Default is first data point
  optional string from = 1;
  // Default is last data point
  optional string to = 2;
  Precision precision = 3;
}